[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.8.0"]

[tool.hatch.version]
path = "src/nhflotools/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = ["/.githooks", "/.github", "/.mypy_cache", "/.pytest_cache", "sonar-project.properties"]

[tool.hatch.build.targets.wheel]
packages = ["src/nhflotools"]

[tool.hatch.publish.index]
disable = true # Requires confirmation when publishing to pypi.

[project]
authors = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]
dependencies = [
  "dask",
  "flopy",
  "geopandas",
  "matplotlib",
  "nlmod>=0.7.3b",
  "numpy",
  "pandas",
  "pykrige",
  "scipy",
  "seaborn",
  "shapely",
  "tqdm",
  "xarray",
]
description = "Tools that support the NHFLO modeling environment."
dynamic = ["version"]
keywords = ["NHFLO"]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
name = "nhflotools"
readme = "README.md"
requires-python = "==3.11"

[project.optional-dependencies]
dev = ["hatch", "pytest", "ruff"]
lintformat = [
  "hatch",
  "ruff==0.6.8",
]

[tool.hatch.envs.default]
installer = "uv"
python = "3.11"

[tool.hatch.envs.lintformat]
detached = true
features = ["lintformat"]

[tool.hatch.envs.lintformat.scripts]
format = ["ruff check --fix --unsafe-fixes src/nhflodata/*.py tests", "ruff format src/nhflodata/*.py tests"]
lint = ["ruff check src/nhflodata/*.py tests", "mypy src/nhflodata/*.py"]
lintminimal = ["ruff check src/nhflodata/*.py tests --config \"lint.select=['E4', 'E7', 'E9', 'F']\""]

[tool.pytest.ini_options]
testpaths = ["tests"]
