[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.8.0", "hatch-vcs"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.githooks",
  "/.github",
  "/.mypy_cache",
  "/.pytest_cache",
  "sonar-project.properties",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nhflotools"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.publish.index]
disable = true # Requires confirmation when publishing to pypi.

[tool.hatch.version]
source = "vcs"

[project]
authors = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Topic :: Utilities",
]
dependencies = [
  "dask",
  "flopy",
  "geopandas",
  "matplotlib",
  "nlmod>=0.7.3",
  "numpy",
  "pandas",
  "pedon",
  "pyarrow",  # pandas feather I/O in well.py is gated behind this optional pandas dep
  "pykrige",
  "pyshp",  # flopy shapefile I/O in pwnlayers is gated behind this optional flopy dep
  "scipy",
  "seaborn",
  "shapely",
  "tqdm",
  "xarray",
]
description = "Tools that support the NHFLO modeling environment."
dynamic = ["version"]
keywords = ["NHFLO"]
license = { file = "LICENSE.txt" }
maintainers = [{ name = "Bas des Tombe", email = "bas.des.tombe@pwn.nl" }]
name = "nhflotools"
readme = "README.md"
requires-python = ">=3.14"

[project.optional-dependencies]
berging = ["hydropandas"]
lintformat = ["hatch", "ruff==0.11.8"]
test = [
  "pytest",
  "pytest-env",
  "nhflodata @ git+https://github.com/NHFLO/data.git@main",
  "nlmod @ git+https://github.com/gwmod/nlmod.git@dev",
]

[tool.hatch.envs.default]
installer = "uv"
python = "3.14"

[tool.hatch.envs.lintformat]
detached = true
features = ["lintformat"]

[tool.hatch.envs.lintformat.scripts]
format = [
  "ruff check --fix --unsafe-fixes src/nhflotools/*.py tests",
  "ruff format src/nhflotools/*.py tests",
]
lint = [
  "ruff check tests src/nhflotools/pwnlayers src/nhflotools/geoconverter src/nhflotools/major_surface_waters.py src/nhflotools/nhi_chloride.py src/nhflotools/panden.py src/nhflotools/polder.py src/nhflotools/well.py",
]
lintminimal = [
  "ruff check tests src/nhflotools/pwnlayers src/nhflotools/geoconverter src/nhflotools/major_surface_waters.py src/nhflotools/nhi_chloride.py src/nhflotools/panden.py src/nhflotools/polder.py src/nhflotools/well.py --config \"lint.select=['E4', 'E7', 'E9', 'F']\"",
]

[tool.hatch.envs.test]
features = ["test"]
[tool.hatch.envs.test.scripts]
test = "pytest -v"

[tool.pytest.ini_options]
addopts = "--strict-markers"
env = ["MPLBACKEND=Agg", "NHFLODATA_LOCATION="]
markers = [
  "mf6: requires the MODFLOW 6 executable",
  "network: hits live web services; excluded in CI",
]
testpaths = ["tests"]
